<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />



    </group>




    <item

        android:title="@string/add">


        <menu>
            <group android:checkableBehavior="single">
                <item

                    android:id="@+id/nav_addpot"
                    android:icon="@drawable/ic_baseline_add_to_photos_24"
                    android:title="@string/addpot" />

                <item

                    android:id="@+id/nav_addfertilizer"
                    android:icon="@drawable/ic_baseline_add_to_photos_24"
                    android:title="@string/addertilizer" />



            </group>

        </menu>
    </item>



    <item

        android:title="@string/navProfile">


        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/side_nav_logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/logout" />

            </group>
        </menu>

    </item>
</menu>