<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/side_nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"
            />


    </group>


    <item

        android:title="@string/navProfile">


        <menu>
            <group android:checkableBehavior="single">
                <item

                    android:id="@+id/side_nav_add_tutorials"
                    android:icon="@drawable/ic_baseline_location_city_24"
                    android:title="Add Tutorials" />

                <item

                    android:id="@+id/side_nav_manage_tutorials"
                    android:icon="@drawable/ic_baseline_payment_24"
                    android:title="Manage Tutorials" />

                <item

                    android:id="@+id/side_nav_search"
                    android:icon="@drawable/ic_baseline_password_24"
                    android:title="Search Tutes" />


                <item
                    android:id="@+id/side_nav_logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/logout" />

            </group>
        </menu>

    </item>


    <group android:checkableBehavior="single">

        <item

            android:title="@string/communicate">

            <menu>
                <item
                    android:icon="@drawable/ic_baseline_message_24"
                    android:id="@+id/side_nav_message"
                    android:title="@string/message" />

                <item
                    android:icon="@drawable/ic_baseline_share_24"
                    android:id="@+id/side_nav_rate_us"
                    android:title="@string/share" />

            </menu>

        </item>


    </group></menu>