<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF1EB"
    android:padding="10dp"
    tools:context=".Login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </ImageView>

    <TextView
        android:id="@+id/loginTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:textColor="#50AE6F"
        android:text="@string/loginText1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logintextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/loginText2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regtextView1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/username"
            android:hint="@string/Username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>


        </com.google.android.material.textfield.TextInputLayout>



        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <CheckBox
                android:id="@+id/loginCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:text="@string/remember_me"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="18dp"
                android:background="#00000000"

                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="#3A78F3"
                app:layout_constraintBaseline_toBaselineOf="@+id/regCheckBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:rippleColor="#FFFFFF" />


        </RelativeLayout>

            

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#379524"
        android:textColor="@color/white"
        android:text="@string/login" />


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <TextView
            android:id="@+id/loginTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:layout_toStartOf="@+id/btn_fogotPassword"
            android:text="@string/forgot_pass_des">

        </TextView>

        <Button

            android:id="@+id/btn_fogotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="78dp"
            android:background="#00000000"
            android:text="@string/btn_forgotPass"
            android:textColor="#3A78F3">

        </Button>




    </RelativeLayout>

    <Button
        android:id="@+id/login_as_admin"
        android:layout_width="188dp"
        android:layout_height="36dp"
        android:layout_marginStart="200dp"
        android:background="#00000000"
        android:text="@string/login_as_admin"
        android:textColor="#3A78F3" />

</LinearLayout>


